// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`identity session status endpoint GET /identity/session/:sessionId/status rejects an invalid internal key 1`] = `
{
  "data": {
    "message": "Unauthorized",
    "statusCode": 401,
  },
  "status": 401,
}
`;

exports[`identity session status endpoint GET /identity/session/:sessionId/status rejects missing internal key 1`] = `
{
  "data": {
    "message": "Unauthorized",
    "statusCode": 401,
  },
  "status": 401,
}
`;

exports[`identity session status endpoint GET /identity/session/:sessionId/status returns inactive for an unknown session 1`] = `
{
  "data": {
    "active": false,
    "activeOrganizationId": null,
    "isMember": false,
  },
  "status": 200,
}
`;

exports[`identity session status endpoint GET /identity/session/:sessionId/status returns status for a live session 1`] = `
{
  "data": {
    "active": true,
    "activeOrganizationId": null,
    "isMember": false,
  },
  "status": 200,
}
`;
